--- a/tf_and.ipynb
+++ b/tf_and.ipynb
@@ -34,8 +34,8 @@
    },
    "outputs": [],
    "source": [
-    "XOR_X = [[0,0],[0,1],[1,0],[1,1]]\n",
-    "XOR_Y = [[0],[0],[0],[1]]"
+    "AND_X = [[0,0],[0,1],[1,0],[1,1]]\n",
+    "AND_Y = [[0],[0],[0],[1]]"
    ]
   },
   {
