--- a/pytorch_and.ipynb
+++ b/pytorch_and.ipynb
@@ -65,18 +65,20 @@
    },
    "outputs": [],
    "source": [
-    "inputs = list(map(lambda s: Variable(torch.Tensor([s])), [\n",
+    "AND_X = [\n",
     "    [0, 0],\n",
     "    [0, 1],\n",
     "    [1, 0],\n",
     "    [1, 1]\n",
-    "]))\n",
-    "targets = list(map(lambda s: Variable(torch.Tensor([s])), [\n",
+    "]"
+    "AND_Y = [\n",
     "    [0],\n",
     "    [0],\n",
     "    [0],\n",
     "    [1]\n",
-    "]))"
+    "]"
+    "inputs = list(Variable(torch.Tensor([s])) for s in AND_X)\n",
+    "targets = list(Variable(torch.Tensor([s])) for s in AND_Y)\n"
    ]
   },
   {
