--- a/tf_and.ipynb
+++ b/tf_and.ipynb
@@ -1401,15 +1401,15 @@
    "source": [
     "t_start = time.clock()\n",
     "for i in range(100000):\n",
-    "\tsess.run(train_step, feed_dict={x_: XOR_X, y_: XOR_Y})\n",
+    "\tsess.run(train_step, feed_dict={x_: AND_X, y_: AND_Y})\n",
     "\tif i % 1000 == 0:\n",
     "\t\tprint('Epoch ', i)\n",
-    "\t\tprint('Hypothesis ', sess.run(Hypothesis, feed_dict={x_: XOR_X, y_: XOR_Y}))\n",
+    "\t\tprint('Hypothesis ', sess.run(Hypothesis, feed_dict={x_: AND_X, y_: AND_Y}))\n",
     "\t\tprint('Theta1 ', sess.run(Theta1))\n",
     "\t\tprint('Bias1 ', sess.run(Bias1))\n",
     "\t\tprint('Theta2 ', sess.run(Theta2))\n",
     "\t\tprint('Bias2 ', sess.run(Bias2))\n",
-    "\t\tprint('cost ', sess.run(cost, feed_dict={x_: XOR_X, y_: XOR_Y}))\n",
+    "\t\tprint('cost ', sess.run(cost, feed_dict={x_: AND_X, y_: AND_Y}))\n",
     "t_end = time.clock()\n",
     "print('Elapsed time ', t_end - t_start)"
    ]
